test/files/errors/errorFile1.jg
_main int () {
    lol int = 0;

    lol ++= 1; #Error
}